[tool.poetry]
name = "src"
version = "0.1.0"
description = "FastAPI + HTMX app for tracking training progress"
authors = ["Andrey Volkov <andvolkov.dev@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
psycopg = "^3.1.17"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
ruff = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
